--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .jumbotron {
   height: 600px;
-  background-image: url(img/landing-page.jpeg);
+  background-image: url(img/landing-page1.png);
   background-position: center;
   background-repeat: no-repeat;
   background-color: cover;
